Fixing overflow

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,7 +15,7 @@
 body {
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: 100vw;
     overflow-x: hidden;
     background: linear-gradient( -45deg, var(--nt-transparent-green), var(--nt-transparent-orange), var(--nt-transparent-purple), var(--nt-transparent-black));
     background-size: 400% 400%;
